--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4  # This will automatically use Node.js 20 when required
-
       - name: Build and deploy
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOSTNAME: ${{ secrets.SSH_HOST }}
-          USER_NAME: ${{ secrets.USER_NAME }}
+        uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-known-hosts: ${{ secrets.SSH_HOST }}
+          ssh-strict: 'false'
+          ssh-user: ${{ secrets.USER_NAME }}
 
-        run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-
-              # Now we have access to EC2 and will start the deploy process.
-              cd /home/ubuntu/workit &&
-              git checkout main &&
-              git fetch --all &&
-              git reset --hard origin/main &&
-              git pull origin main &&
-              sudo ./deploy.sh
-              '
+      - run: |
+          echo "Deploying"
+          cd /home/ubuntu/workit
+          git checkout main
+          git fetch --all
+          git reset --hard origin/main
+          git pull origin main
