--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
             USER_NAME: ${{secrets.USER_NAME}}
       
       - run: |
-          echo "$PRIVATE_KEY" > private_key && sudo chmod 400 private_key
-          cat private_key
+          sudo echo "$PRIVATE_KEY" > private_key && sudo chmod 400 private_key
+          ssh -i private_key ${USER_NAME}@${HOSTNAME}
