--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,13 @@ jobs:
     steps:
       - name: Build and deploy
         uses: actions/checkout@v4
-        env:
-            PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-            HOSTNAME: ${{secrets.SSH_HOST}}
-            USER_NAME: ${{secrets.USER_NAME}}
-      
-      - run: |
-          sudo echo "$PRIVATE_KEY" > private_key && sudo chmod 400 private_key
-          ssh -i private_key ${USER_NAME}@${HOSTNAME}
+        with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.SSH_HOST }}
+          REMOTE_USER: ${{ secrets.USER_NAME }}
+          SCRIPT_AFTER: |
+            cd /home/ubuntu/workit
+            git checkout main
+            git fetch --all
+            git reset --hard origin/main
+            git pull origin main
