add postgres service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:16
+    volumes:
+      - data:/var/lib/postgresql/data
+    restart: always
+    container_name: workit_db
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+
   backend:
     build: .
     container_name: workit
     ports:
       - 8000:8000
+    depends_on:
+      - db
     volumes:
       - .:/app
     env_file:
@@ -13,3 +26,6 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=core.settings.prod
     command: gunicorn core.wsgi --bind 0.0.0.0:8000
+
+volumes:
+  data:
